# cpp-starter

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt
src/app/: CMakeLists.txt  main.cpp
src/mylib/: CMakeLists.txt
src/mylib/src/: mylib.cpp
src/mylib/test/: mylibtest.cpp
